# urdf_test

./: CMakeLists.txt  README.md  package.xml
launch/: urdf_pen_test.launch  urdf_sc_test.launch
meshes/: Pen_link.stl  SC_Base.stl  SC_Pis.stl  SC_link2.stl
rviz/: rviz_pen.rviz  rviz_sc.rviz
src/: pen_joint_node.cpp  sc_20sec_data.csv  sc_joint_node.cpp
urdf/: SliderCrank.gv  pendulum.urdf  slider_crank.urdf
