<?xml version="1.0"?>
<package format="2">
  <name>urdf_test</name>
  <version>0.0.0</version>
  <description>The urdf_test package</description>
  <maintainer email="jae-beom@kakao.comm">jaebeom</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
  </export>
</package>